# composable_kernel

./: CMakeLists.txt  Dockerfile  Jenkinsfile  bench_transformer_gelu.sh  conv2d_asm_interleave_ds_write_part.s  conv2d_asm_interleave_ds_write_part_256x256x32.s  conv2d_asm_interleave_ds_write_part_buffer_load_part_256x256x32.s  conv2d_asm_interleave_ds_write_part_buffer_load_part_shuffle_buffer_load_256x256x32.s  conv2d_wrw_fast_kernel.s  conv2d_wrw_origin.s  conv2d_wrw_outline.s  generate_transformer_sizes.py  jenkinsfile
device_operation/include/: device_gemm.hpp  device_gemm_splitk_xdl.hpp  device_gemm_xdl.hpp  device_gemm_xdl_c_shuffle_bias.hpp
example/: CMakeLists.txt
example/01_gemm/: CMakeLists.txt  common.hpp  gemm_dl_fp16.cpp  gemm_dl_fp32.cpp  gemm_dl_int8.cpp  gemm_xdl_fp16.cpp  gemm_xdl_fp16_flash_attention.cpp  gemm_xdl_fp16_splitk.cpp  gemm_xdl_fp64.cpp  gemm_xdl_skip_all_lds_fp16.cpp  gemm_xdl_skip_b_lds_fp16.cpp  run_gemm_example.inc
example/02_gemm_bilinear/: gemm_bilinear_wmma_fp16.cpp  gemm_bilinear_xdl_fp16.cpp
example/03_gemm_bias_relu/: gemm_bias_relu_xdl_fp16.cpp
example/04_gemm_add_add_fastgelu/: run_gemm_add_add_fastgelu_example.inc
example/09_convnd_fwd/: convnd_fwd_common.hpp  (+3 more)
profiler/: CMakeLists.txt
profiler/src/: CMakeLists.txt  profile_conv_fwd.cpp  profiler.cpp
script/: clang-format-overwrite.sh  cmake-ck-dev.sh  cmake-ck-release.sh  cmake-rocm.sh  count_vgpr.sh  hipclang_opt.sh  profile_conv.sh  profile_gemm.sh  run.sh
test/: CMakeLists.txt
test/batched_gemm_multi_d/: CMakeLists.txt  test_batched_gemm_multi_d.cpp
(+273 files in other folders)
